Update hover and selected colors

--- a/src/common.scss
+++ b/src/common.scss
@@ -1,5 +1,7 @@
 // Color
 $grey: #b8b6b6;
+$lightGrey: #eaeaea;
+$lighterGrey: #f3f3f3;
 
 $pagePadding: 20px;
 // $companyListColumns: repeat(6, 1fr);
